--- a/onlyfans/index.html
+++ b/onlyfans/index.html
@@ -145,7 +145,11 @@
                             <div class="swiper-wrapper">
                                 <article class="swiper-slide slider__item slider__item_free">
                                     <img src="./img/temp-bg.jpg" alt="Фон" class="slider__bg">
-                                    <button class="button slider__item-settings"></button>
+                                    <button class="button slider__item-settings">
+                                        <svg width="15" height="35">
+                                            <use width="15" height="35" xlink:href="./img/icons.svg#more"></use>
+                                        </svg>
+                                    </button>
                                     <a href="#" class="slider__item-ico">
                                         <img src="./img/temp-bg.jpg" alt="Иконка модели">
                                     </a>
@@ -156,7 +160,11 @@
                                 </article>
                                 <article class="swiper-slide slider__item">
                                     <img src="./img/temp-bg.jpg" alt="Фон" class="slider__bg">
-                                    <button class="button slider__item-settings"></button>
+                                    <button class="button slider__item-settings">
+                                        <svg width="15" height="35">
+                                            <use width="15" height="35" xlink:href="./img/icons.svg#more"></use>
+                                        </svg>
+                                    </button>
                                     <a href="#" class="slider__item-ico">
                                         <img src="./img/temp-bg.jpg" alt="Иконка модели">
                                     </a>
@@ -167,7 +175,11 @@
                                 </article>
                                 <article class="swiper-slide slider__item slider__item_free">
                                     <img src="./img/temp-bg.jpg" alt="Фон" class="slider__bg">
-                                    <button class="button slider__item-settings"></button>
+                                    <button class="button slider__item-settings">
+                                        <svg width="15" height="35">
+                                            <use width="15" height="35" xlink:href="./img/icons.svg#more"></use>
+                                        </svg>
+                                    </button>
                                     <a href="#" class="slider__item-ico">
                                         <img src="./img/temp-bg.jpg" alt="Иконка модели">
                                     </a>
@@ -178,7 +190,11 @@
                                 </article>
                                 <article class="swiper-slide slider__item">
                                     <img src="./img/temp-bg.jpg" alt="Фон" class="slider__bg">
-                                    <button class="button slider__item-settings"></button>
+                                    <button class="button slider__item-settings">
+                                        <svg width="15" height="35">
+                                            <use width="15" height="35" xlink:href="./img/icons.svg#more"></use>
+                                        </svg>
+                                    </button>
                                     <a href="#" class="slider__item-ico">
                                         <img src="./img/temp-bg.jpg" alt="Иконка модели">
                                     </a>
@@ -189,7 +205,11 @@
                                 </article>
                                 <article class="swiper-slide slider__item slider__item_free">
                                     <img src="./img/temp-bg.jpg" alt="Фон" class="slider__bg">
-                                    <button class="button slider__item-settings"></button>
+                                    <button class="button slider__item-settings">
+                                        <svg width="15" height="35">
+                                            <use width="15" height="35" xlink:href="./img/icons.svg#more"></use>
+                                        </svg>
+                                    </button>
                                     <a href="#" class="slider__item-ico">
                                         <img src="./img/temp-bg.jpg" alt="Иконка модели">
                                     </a>
@@ -200,7 +220,11 @@
                                 </article>
                                 <article class="swiper-slide slider__item slider__item_free">
                                     <img src="./img/temp-bg.jpg" alt="Фон" class="slider__bg">
-                                    <button class="button slider__item-settings"></button>
+                                    <button class="button slider__item-settings">
+                                        <svg width="15" height="35">
+                                            <use width="15" height="35" xlink:href="./img/icons.svg#more"></use>
+                                        </svg>
+                                    </button>
                                     <a href="#" class="slider__item-ico">
                                         <img src="./img/temp-bg.jpg" alt="Иконка модели">
                                     </a>
@@ -211,7 +235,11 @@
                                 </article>
                                 <article class="swiper-slide slider__item">
                                     <img src="./img/temp-bg.jpg" alt="Фон" class="slider__bg">
-                                    <button class="button slider__item-settings"></button>
+                                    <button class="button slider__item-settings">
+                                        <svg width="15" height="35">
+                                            <use width="15" height="35" xlink:href="./img/icons.svg#more"></use>
+                                        </svg>
+                                    </button>
                                     <a href="#" class="slider__item-ico">
                                         <img src="./img/temp-bg.jpg" alt="Иконка модели">
                                     </a>
@@ -222,7 +250,11 @@
                                 </article>
                                 <article class="swiper-slide slider__item slider__item_free">
                                     <img src="./img/temp-bg.jpg" alt="Фон" class="slider__bg">
-                                    <button class="button slider__item-settings"></button>
+                                    <button class="button slider__item-settings">
+                                        <svg width="15" height="35">
+                                            <use width="15" height="35" xlink:href="./img/icons.svg#more"></use>
+                                        </svg>
+                                    </button>
                                     <a href="#" class="slider__item-ico">
                                         <img src="./img/temp-bg.jpg" alt="Иконка модели">
                                     </a>
@@ -233,7 +265,11 @@
                                 </article>
                                 <article class="swiper-slide slider__item slider__item_free">
                                     <img src="./img/temp-bg.jpg" alt="Фон" class="slider__bg">
-                                    <button class="button slider__item-settings"></button>
+                                    <button class="button slider__item-settings">
+                                        <svg width="15" height="35">
+                                            <use width="15" height="35" xlink:href="./img/icons.svg#more"></use>
+                                        </svg>
+                                    </button>
                                     <a href="#" class="slider__item-ico">
                                         <img src="./img/temp-bg.jpg" alt="Иконка модели">
                                     </a>
