--- a/onlyfans/index.html
+++ b/onlyfans/index.html
@@ -150,10 +150,10 @@
                                             <use width="15" height="35" xlink:href="./img/icons.svg#more"></use>
                                         </svg>
                                     </button>
-                                    <a href="#" class="slider__item-ico">
+                                    <a href="./item.html" class="slider__item-ico">
                                         <img src="./img/temp-bg.jpg" alt="Иконка модели">
                                     </a>
-                                    <a href="#" class="slider__item-content">
+                                    <a href="./item.html" class="slider__item-content">
                                         <h3 class="slider__item-name">Shoot with Mads</h3>
                                         <span class="slider__item-nickname">@nickname</span>
                                     </a>
@@ -165,10 +165,10 @@
                                             <use width="15" height="35" xlink:href="./img/icons.svg#more"></use>
                                         </svg>
                                     </button>
-                                    <a href="#" class="slider__item-ico">
+                                    <a href="./item.html" class="slider__item-ico">
                                         <img src="./img/temp-bg.jpg" alt="Иконка модели">
                                     </a>
-                                    <a href="#" class="slider__item-content">
+                                    <a href="./item.html" class="slider__item-content">
                                         <h3 class="slider__item-name">Shoot with Mads</h3>
                                         <span class="slider__item-nickname">@nickname</span>
                                     </a>
@@ -180,10 +180,10 @@
                                             <use width="15" height="35" xlink:href="./img/icons.svg#more"></use>
                                         </svg>
                                     </button>
-                                    <a href="#" class="slider__item-ico">
+                                    <a href="./item.html" class="slider__item-ico">
                                         <img src="./img/temp-bg.jpg" alt="Иконка модели">
                                     </a>
-                                    <a href="#" class="slider__item-content">
+                                    <a href="./item.html" class="slider__item-content">
                                         <h3 class="slider__item-name">Shoot with Mads</h3>
                                         <span class="slider__item-nickname">@nickname</span>
                                     </a>
@@ -195,10 +195,10 @@
                                             <use width="15" height="35" xlink:href="./img/icons.svg#more"></use>
                                         </svg>
                                     </button>
-                                    <a href="#" class="slider__item-ico">
+                                    <a href="./item.html" class="slider__item-ico">
                                         <img src="./img/temp-bg.jpg" alt="Иконка модели">
                                     </a>
-                                    <a href="#" class="slider__item-content">
+                                    <a href="./item.html" class="slider__item-content">
                                         <h3 class="slider__item-name">Shoot with Mads</h3>
                                         <span class="slider__item-nickname">@nickname</span>
                                     </a>
@@ -210,10 +210,10 @@
                                             <use width="15" height="35" xlink:href="./img/icons.svg#more"></use>
                                         </svg>
                                     </button>
-                                    <a href="#" class="slider__item-ico">
+                                    <a href="./item.html" class="slider__item-ico">
                                         <img src="./img/temp-bg.jpg" alt="Иконка модели">
                                     </a>
-                                    <a href="#" class="slider__item-content">
+                                    <a href="./item.html" class="slider__item-content">
                                         <h3 class="slider__item-name">Shoot with Mads</h3>
                                         <span class="slider__item-nickname">@nickname</span>
                                     </a>
@@ -225,10 +225,10 @@
                                             <use width="15" height="35" xlink:href="./img/icons.svg#more"></use>
                                         </svg>
                                     </button>
-                                    <a href="#" class="slider__item-ico">
+                                    <a href="./item.html" class="slider__item-ico">
                                         <img src="./img/temp-bg.jpg" alt="Иконка модели">
                                     </a>
-                                    <a href="#" class="slider__item-content">
+                                    <a href="./item.html" class="slider__item-content">
                                         <h3 class="slider__item-name">Shoot with Mads</h3>
                                         <span class="slider__item-nickname">@nickname</span>
                                     </a>
@@ -240,10 +240,10 @@
                                             <use width="15" height="35" xlink:href="./img/icons.svg#more"></use>
                                         </svg>
                                     </button>
-                                    <a href="#" class="slider__item-ico">
+                                    <a href="./item.html" class="slider__item-ico">
                                         <img src="./img/temp-bg.jpg" alt="Иконка модели">
                                     </a>
-                                    <a href="#" class="slider__item-content">
+                                    <a href="./item.html" class="slider__item-content">
                                         <h3 class="slider__item-name">Shoot with Mads</h3>
                                         <span class="slider__item-nickname">@nickname</span>
                                     </a>
@@ -255,10 +255,10 @@
                                             <use width="15" height="35" xlink:href="./img/icons.svg#more"></use>
                                         </svg>
                                     </button>
-                                    <a href="#" class="slider__item-ico">
+                                    <a href="./item.html" class="slider__item-ico">
                                         <img src="./img/temp-bg.jpg" alt="Иконка модели">
                                     </a>
-                                    <a href="#" class="slider__item-content">
+                                    <a href="./item.html" class="slider__item-content">
                                         <h3 class="slider__item-name">Shoot with Mads</h3>
                                         <span class="slider__item-nickname">@nickname</span>
                                     </a>
@@ -270,10 +270,10 @@
                                             <use width="15" height="35" xlink:href="./img/icons.svg#more"></use>
                                         </svg>
                                     </button>
-                                    <a href="#" class="slider__item-ico">
+                                    <a href="./item.html" class="slider__item-ico">
                                         <img src="./img/temp-bg.jpg" alt="Иконка модели">
                                     </a>
-                                    <a href="#" class="slider__item-content">
+                                    <a href="./item.html" class="slider__item-content">
                                         <h3 class="slider__item-name">Shoot with Mads</h3>
                                         <span class="slider__item-nickname">@nickname</span>
                                     </a>
