--- a/onlyfans/index.html
+++ b/onlyfans/index.html
@@ -33,7 +33,7 @@
                         </svg>
                     </button>
                 </form>
-                <a href="#" target="_blank" class="telegram">
+                <a href="#" target="_blank" class="telegram telegram_header">
                     <img src="./img/tg-ico.png" alt="Лого телеграм" class="telegram__img">
                 </a>
             </div>
