--- a/onlyfans/item.html
+++ b/onlyfans/item.html
@@ -7,7 +7,7 @@
     <title>Sliv Onlyfans</title>
     <script src="./js/main.js" defer></script>
 </head>
-<body class="js-page-identifier body-bg" data-page="index">
+<body class="js-page-identifier body-bg" data-page="item">
     <header class="header">
         <div class="container">
             <div class="header__wrap">
@@ -25,24 +25,71 @@
                         </li>
                     </ul>
                 </nav>
-                <form class="search js-head-search-wrap">
-                    <input type="search" class="search__input js-head-search">
-                    <button class="button search__button">
-                        <svg width="16" height="16">
-                            <use width="16" height="16" xlink:href="./img/icons.svg#search-ico"></use>
-                        </svg>
-                    </button>
-                </form>
-                <a href="#" target="_blank" class="telegram">
-                    <img src="./img/tg-ico.png" alt="Лого телеграм" class="telegram__img">
-                </a>
             </div>
         </div>
     </header>
-    <main class="main">
+    <main class="main model">
         <div class="container">
-            <div class="main__wrap">
-                
+            <h2 class="model__name">Camilla Kerslake</h2>
+            <div class="model__wrap">
+                <div class="model__priselist">
+                    <article class="tariff">
+                        <div class="tariff__head">
+                            <h3 class="tariff__name">One</h3>
+                            <a href="#" target="_blank" class="button button_blue tariff__button">Купить</a>
+                        </div>
+                        <span class="tariff__description">$3.00</span>
+                        <ul class="tariff__list">
+                            <li class="tariff__item">Слив одной модели</li>
+                        </ul>
+                        <a href="#" target="_blank" class="button button_blue tariff__button">Купить доступ</a>
+                    </article>
+                    <article class="tariff">
+                        <div class="tariff__head">
+                            <h3 class="tariff__name">DEMO</h3>
+                            <a href="#" target="_blank" class="button button_blue tariff__button">Купить</a>
+                        </div>
+                        <span class="tariff__description">Подписка $5.00 навсегда</span>
+                        <ul class="tariff__list">
+                            <li class="tariff__item">Слив одной модели</li>
+                            <li class="tariff__item">Слив одной</li>
+                        </ul>
+                        <a href="#" target="_blank" class="button button_blue tariff__button">Купить доступ</a>
+                    </article>
+                    <article class="tariff">
+                        <div class="tariff__head">
+                            <h3 class="tariff__name">Premium</h3>
+                            <a href="#" target="_blank" class="button button_pink tariff__button">Купить</a>
+                        </div>
+                        <span class="tariff__description">Подписка $15.00 навсегда</span>
+                        <ul class="tariff__list">
+                            <li class="tariff__item">Слив одной модели</li>
+                            <li class="tariff__item">Слив одной модели</li>
+                        </ul>
+                        <a href="#" target="_blank" class="button button_pink tariff__button">Купить доступ</a>
+                    </article>
+                    <article class="tariff">
+                        <div class="tariff__head">
+                            <h3 class="tariff__name">VIP</h3>
+                            <a href="#" target="_blank" class="button button_pink tariff__button">Купить</a>
+                        </div>
+                        <span class="tariff__description">Подписка $50.00 навсегда</span>
+                        <ul class="tariff__list">
+                            <li class="tariff__item">Слив одной модели</li>
+                            <li class="tariff__item">Слив одной модели</li>
+                            <li class="tariff__item">Слив одной модели</li>
+                        </ul>
+                        <a href="#" target="_blank" class="button button_pink tariff__button">Купить доступ</a>
+                    </article>
+                    <a href="#" target="_blank" class="telegram telegram_pricelist">
+                        <img src="./img/tg-ico.png" alt="Лого телеграм" class="telegram__img">
+                    </a>
+                </div>
+                <div class="model__main">
+                    <div class="model__head">
+                        
+                    </div>
+                </div>
             </div>
         </div>
     </main>
