--- a/onlyfans/item.html
+++ b/onlyfans/item.html
@@ -25,11 +25,27 @@
                         </li>
                     </ul>
                 </nav>
+                <a href="#" target="_blank" class="telegram telegram_header-item">
+                    <img src="./img/tg-ico.png" alt="Лого телеграм" class="telegram__img">
+                </a>
             </div>
         </div>
     </header>
     <main class="main model">
         <div class="container">
+            <div class="breadcrumbs breadcrumbs_mobile">
+                <ul class="breadcrumbs__list">
+                    <li class="breadcrumbs__item breadcrumbs__item_mobile">
+                        <a href="./index.html" class="breadcrumbs__link">Назад</a>
+                    </li>
+                    <li class="breadcrumbs__item">
+                        <a href="./index.html" class="breadcrumbs__link">Назад</a>
+                    </li>
+                    <li class="breadcrumbs__item">
+                        <a href="./index.html" class="breadcrumbs__link">Назад</a>
+                    </li>
+                </ul>
+            </div>
             <h2 class="model__name">Camilla Kerslake</h2>
             <div class="model__wrap">
                 <div class="model__priselist">
@@ -87,7 +103,65 @@
                 </div>
                 <div class="model__main">
                     <div class="model__head">
-                        
+                        <div class="model__head-top">
+                            <img src="./img/model-main.jpg" alt="Фото модели" class="model__photo">
+                            <a href="./index.html" class="model__return-link">
+                                <svg width="21" height="8">
+                                    <use width="21" height="8" xlink:href="./img/icons.svg#arrow-default"></use>
+                                </svg>
+                                Camilla Kerslake
+                            </a>
+                        </div>
+                        <div class="model__head-body">
+                            <div class="model__head-wrap">
+                                <div class="model__icon">
+                                    <img src="./img/model-ico.jpg" alt="Иконка модели">
+                                </div>
+                                <ul class="model__social">
+                                    <li class="model__social-item">
+                                        <a href="#" class="model__social-link">
+                                            <svg enable-background="new 0 0 24 24" height="40" viewBox="0 0 24 24" width="40" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><linearGradient id="SVGID_1_" gradientTransform="matrix(0 -1.982 -1.844 0 -132.522 -51.077)" gradientUnits="userSpaceOnUse" x1="-37.106" x2="-26.555" y1="-72.705" y2="-84.047"><stop offset="0" stop-color="#fd5"/><stop offset=".5" stop-color="#ff543e"/><stop offset="1" stop-color="#c837ab"/></linearGradient><path d="m1.5 1.633c-1.886 1.959-1.5 4.04-1.5 10.362 0 5.25-.916 10.513 3.878 11.752 1.497.385 14.761.385 16.256-.002 1.996-.515 3.62-2.134 3.842-4.957.031-.394.031-13.185-.001-13.587-.236-3.007-2.087-4.74-4.526-5.091-.559-.081-.671-.105-3.539-.11-10.173.005-12.403-.448-14.41 1.633z" fill="url(#SVGID_1_)"/><path d="m11.998 3.139c-3.631 0-7.079-.323-8.396 3.057-.544 1.396-.465 3.209-.465 5.805 0 2.278-.073 4.419.465 5.804 1.314 3.382 4.79 3.058 8.394 3.058 3.477 0 7.062.362 8.395-3.058.545-1.41.465-3.196.465-5.804 0-3.462.191-5.697-1.488-7.375-1.7-1.7-3.999-1.487-7.374-1.487zm-.794 1.597c7.574-.012 8.538-.854 8.006 10.843-.189 4.137-3.339 3.683-7.211 3.683-7.06 0-7.263-.202-7.263-7.265 0-7.145.56-7.257 6.468-7.263zm5.524 1.471c-.587 0-1.063.476-1.063 1.063s.476 1.063 1.063 1.063 1.063-.476 1.063-1.063-.476-1.063-1.063-1.063zm-4.73 1.243c-2.513 0-4.55 2.038-4.55 4.551s2.037 4.55 4.55 4.55 4.549-2.037 4.549-4.55-2.036-4.551-4.549-4.551zm0 1.597c3.905 0 3.91 5.908 0 5.908-3.904 0-3.91-5.908 0-5.908z" fill="#fff"/></svg>
+                                        </a>
+                                    </li>
+                                    <li class="model__social-item">
+                                        <a href="#" class="model__social-link">
+                                            <svg>
+                                                <use width="30" height="30" xlink:href="./img/icons.svg#twitter-ico"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="model__social-item">
+                                        <a href="#" class="model__social-link">
+                                            <svg>
+                                                <use width="30" height="30" xlink:href="./img/icons.svg#fb-ico"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="model__head-data">
+                                <span class="model__head-name">Camilla Kerslake</span>
+                                <span class="model__head-nickname">@camillakerslake</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="model__body">
+                        <div class="model__subscribe">
+                            <span class="model__text">Подписка на onlyfans стоит $4.99 в месяц</span>
+                            <div class="model__subscribe-item">
+                                <span class="model__text model__text_bold">На нашем сайте доступ 1 модели 3$ навсегда</span>
+                                <a href="#" class="button button_rounded button_blue model__button">one</a>
+                            </div>
+                            <div class="model__subscribe-item">
+                                <span class="model__text model__text_bold">Доступ ко всем моделям 15$ навсегда </span>
+                                <a href="#" class="button button_rounded button_pink model__button">Premium</a>
+                            </div>
+                        </div>
+                        <div class="model__description">
+                            <p class="model__text model__text_light">Camilla Kerslake is a BRIT nominated English opera singer, who was the first act to be signed to Gary Barlow’s Universal label, Future Records in 2009. She has gone on to receive international acclaim as a bestselling English Royal soprano, performing in arenas and stadiums all over the world.</p>
+                            <p class="model__text model__text_light">Camilla continues to diversify the uses of her enchanting voice, having recently provided her vocals to an Oscar and BAFTA nominated motion picture as well as being the NFL (National Football League) anthem singer during their London games for 4 years in a row.</p>
+                            <p class="model__text model__text_light">Kerslake has released two studio albums, her debut self-titled album released in 2009, followed by Moments, released in 2011 as well as singles, You raise me up released in <br>2014 and Come Home released in 2015 with new material coming in 2020.</p>
+                        </div>
                     </div>
                 </div>
             </div>
